--- a/src/bundle/Resources/config/dashboard.yml
+++ b/src/bundle/Resources/config/dashboard.yml
@@ -1,6 +1,6 @@
 services:
     Edgar\EzUICron\Tab\Dashboard\CronTab:
-        parent: EzSystems\EzPlatformAdminUi\Tab\AbstractTab
+        parent: Ibexa\Contracts\AdminUi\Tab\AbstractTab
         public: false
         tags:
             - { name: ezplatform.tab, group: dashboard-everyone }
